# tpbot

./: .$main-diagram.drawio.bkp  .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: .env.example  .gitignore
backend/src/: db.ts  index.ts  session.ts  user.ts
docs/: .$main-diagram.drawio.dtmp  .gitignore  board-bringup.ipynb  design-doc.ipynb  main-diagram.drawio
docs/subsystems/: mechanical.ipynb  power-source.ipynb  robot-controller.ipynb
electronics/: #auto_saved_files#  drivers.kicad_sch  fp-info-cache  motor_driver.kicad_sch  power.kicad_sch  telepresence-bot-old.kicad_pcb  telepresence-bot-old.kicad_prl  telepresence-bot-old.kicad_pro  telepresence-bot.kicad_dru  telepresence-bot.kicad_pcb  telepresence-bot.kicad_prl  telepresence-bot.kicad_pro  telepresence-bot.kicad_sch  telepresence-bot.net  ~telepresence-bot.kicad_sch.lck
electronics/gerber/: telepresence-bot-B_Cu.gbr  telepresence-bot-B_Fab.gbr  telepresence-bot-B_Mask.gbr  telepresence-bot-B_Paste.gbr  telepresence-bot-B_Silkscreen.gbr  telepresence-bot-Edge_Cuts.gbr  telepresence-bot-F_Cu.gbr  telepresence-bot-F_Fab.gbr  telepresence-bot-F_Mask.gbr  telepresence-bot-F_Paste.gbr  telepresence-bot-F_Silkscreen.gbr  telepresence-bot-In1_Cu.gbr  telepresence-bot-In2_Cu.gbr  telepresence-bot-NPTH.drl  telepresence-bot-PTH.drl  telepresence-bot-job.gbrjob
electronics/manufacturing/: bom-intermediate.numbers  bom-jlcpcb.csv  jlcpcb-bom-final.numbers  pcba-position-intermediate.numbers  telepresence-bot-bottom-pos.csv  telepresence-bot-pnp_bottom.gbr  telepresence-bot-pnp_top.gbr
firmware/: CMakeLists.txt  FIRMWARE_DOCUMENTATION.md  README.md  SETUP_GUIDE.md  TMC5160_INA228_Register_Reference.md  build.sh  sdkconfig.defaults  sdkconfig.old
firmware/main/: CMakeLists.txt  ina228.c  ina228.h  main.c  power_management.c  power_management.h  tmc5160.c  tmc5160.h
frontend/: pnpm-lock.yaml  prompt_start.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: RobotVideo.tsx  admin-dashboard.tsx  connection-status.tsx  dashboard.tsx  login-form.tsx  robot-control-interface.tsx  system-status.tsx  websocket-provider.tsx
frontend/components/ui/: RobotList.tsx  Settings.tsx
frontend/hooks/: use-websocket-service.ts  use-websocket.ts
frontend/providers/: WebRTCProvider.tsx
frontend/service/: RealtimeClient.ts  Signal.ts  providers.tsx  types.ts
frontend/service/webrtc/: PeerManager.ts  WebRTCManager.ts
frontend/utils/: utils.ts
llbe/: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  README.md  build.sh  config.json  docker-compose.yml  setup_macos.sh  test_client.py
llbe/include/: config.hpp  connection_handler.hpp  dtls_server.hpp  llbe.hpp  logger.hpp  trunk.hpp  udp.hpp  webrtc.hpp
llbe/src/: CMakeLists.txt  config.cpp  connection_handler.cpp  dtls_server.cpp  main.cpp
llbe/src/main/: CMakeLists.txt  config.cpp  llbe.cpp  logger.cpp  loglistener.cpp  main.cpp  sha256.cpp  trunk.cpp  udp.cpp  webrtc.cpp
llbe/src/tests/: CMakeLists.txt  test_config.cpp
llbe/src/utils/: CMakeLists.txt  loglistener.cpp  mcast_send.cpp
llbe/tests/: CMakeLists.txt  test_config.cpp  test_connection_handler.cpp  test_dtls_server.cpp  test_logger.cpp
shared-cpp/: CMakeLists.txt
shared-cpp/include/: crypto.hpp  msg.hpp
